# chan_cras

./: .cursorrules  .gitignore  README.md  implementation_plan.md
backend/: create_admin.py  debug_hash.py  debug_settings.py  pyproject.toml  requirements.txt  seed_db.py  test_auth_api.py  verify_crud.py
backend/alembic/: env.py
backend/alembic/versions/: 0dce83180670_add_notes_to_event.py  1664ca3ca762_add_mfa_fields_to_user.py  36e978217f0e_initial_migration.py  791112025046_convert_json_to_jsonb.py  983e797d3862_add_system_settings_table.py  d8b17bba5b7b_add_gender_to_subject.py  ebb25fb161d4_rename_gender_to_sex_and_add_study_.py
backend/app/: audit.py  auth.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: auth_google.py  auth_mfa.py  events.py  procedures.py  settings.py  studies.py  subjects.py  users.py
backend/tests/: test_audit.py  test_models.py  test_utils.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DynamicForm.tsx  EntityManager.tsx  EventModal.tsx  Layout.tsx  LoginPage.tsx  MFASettings.tsx  NewEventModal.tsx  SettingsManager.tsx  StudySubjectLinker.tsx  WeeklyCalendar.tsx
frontend/src/services/: api.ts
frontend/src/test/: DynamicForm.test.tsx  DynamicForm_simple.test.tsx  setup.ts  simple.test.ts
frontend/src/utils/: timezone.ts
